' =========================
' EER diagram v2 for Kamtjatka Fire Detection System
' Based on domain-model-v2.puml and the project description.
' =========================

@startuml
title Kamtjatka Fire Detection System - EER Diagram v2

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true
skinparam linetype ortho
skinparam nodesep 90
skinparam ranksep 90
skinparam packageStyle rectangle

left to right direction

class Residence <<entity>> {
  residence_id : int <<PK>>
  name : varchar(100)
  address : varchar(255)
}

class Room <<entity>> {
  room_id : int <<PK>>
  room_number : varchar(50)
  floor : int
  room_type : varchar(50)
  occupancy_status : varchar(50)
  residence_id : int <<FK>>
}

class User <<supertype>> {
  user_id : int <<PK>>
  full_name : varchar(150)
  email : varchar(150) <<UNIQUE>>
  password_hash : varchar(255)
  phone_number : varchar(50)
  role : varchar(50)
}

class Resident <<subtype>> {
  user_id : int <<PK, FK>>
  student_id : varchar(100) <<UNIQUE>>
  room_id : int <<FK nullable>>
}

class Manager <<subtype>> {
  user_id : int <<PK, FK>>
  employee_id : varchar(100) <<UNIQUE>>
  office_location : varchar(100)
  residence_id : int <<FK>>
}

class Sensors <<entity>> {
  SensorId : int <<PK>>
  SerialNumber : varchar(100) <<UNIQUE>>
  SensorType : varchar(100)
  InstalledAt : datetime
  Status : varchar(50)
  FirmwareVersion : varchar(50)
  RoomId : int <<FK>>
}

class Readings <<entity>> {
  ReadingId : int <<PK>>
  Timestamp : datetime
  Temperature : double
  Humidity : double
  Co2Level : double
  SmokeLevel : double <<nullable>>
  Tvoc : double <<nullable>>
  Eco2 : double <<nullable>>
  Aqi : int <<nullable>>
  Classification : varchar(100) <<nullable>>
  SensorId : int <<FK>>
}

class Predictions <<entity>> {
  PredictionId : int <<PK>>
  PredictionTime : datetime
  PredictedCategory : varchar(100)
  ConfidenceScore : double
  RiskLevel : varchar(50)
  ReadingId : int <<FK, UNIQUE>>
}

class DetectionEvent <<entity>> {
  event_id : int <<PK>>
  start_time : datetime
  end_time : datetime <<nullable>>
  event_status : varchar(50)
  severity_level : varchar(50)
  detected_as : varchar(100)
  suspected_cause : varchar(100)
  room_id : int <<FK>>
  PredictionId : int <<FK nullable>>
}

class DetectionEventReading <<associative entity>> {
  event_id : int <<PK, FK>>
  ReadingId : int <<PK, FK>>
}

class Alert <<entity>> {
  alert_id : int <<PK>>
  created_at : datetime
  alert_type : varchar(50)
  message : varchar(500)
  priority : varchar(50)
  status : varchar(50)
  detection_event_id : int <<FK>>
  manager_id : int <<FK nullable>>
  resident_id : int <<FK nullable>>
}

class IncidentReport <<entity>> {
  report_id : int <<PK>>
  created_at : datetime
  description : varchar(1000)
  outcome : varchar(255)
  cost_amount : decimal(10,2)
  detection_event_id : int <<FK, UNIQUE>>
  resident_id : int <<FK nullable>>
  reviewed_by_id : int <<FK nullable>>
}

Residence -[hidden]down- Room
User -[hidden]down- Resident
Resident -[hidden]right- Manager
Sensors -[hidden]down- Readings
Readings -[hidden]down- Predictions
DetectionEvent -[hidden]down- Alert
Alert -[hidden]right- IncidentReport

User <|-- Resident
User <|-- Manager

Residence "1" -- "1..*" Room : contains
Residence "1" -- "1..*" Manager : managed by

Room "1" -- "0..*" Resident : occupied by
Room "1" -- "1..*" Sensors : equipped with
Room "1" -- "0..*" DetectionEvent : has

Sensors "1" -- "0..*" Readings : produces
Readings "1" -- "0..1" Predictions : analyzed as

DetectionEvent "1" -- "1..*" DetectionEventReading
Readings "1" -- "0..*" DetectionEventReading
DetectionEvent "0..*" -- "0..1" Predictions : supported by

DetectionEvent "1" -- "0..*" Alert : triggers
DetectionEvent "1" -- "0..1" IncidentReport : documented in

Manager "1" -- "0..*" Alert : monitors
Resident "1" -- "0..*" Alert : receives
Manager "1" -- "0..*" IncidentReport : reviews
Resident "1" -- "0..*" IncidentReport : involved in

@enduml
